# Stunda

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  analysis_options.yaml  distribute_options.yaml  pubspec.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
app/: README.md  pubspec.yaml
app/ios/: Podfile
app/lib/: main.dart
app/linux/: CMakeLists.txt
app/test/: action_card_test.dart  action_run_state_test.dart  app_controller_test.dart  app_localizations_test.dart  appearance_test.dart  background_run_test.dart  background_run_widget_test.dart  content_panel_test.dart  contextual_help_test.dart  drop_zone_test.dart  duplicates_action_test.dart  duplicates_controller_test.dart  duplicates_model_test.dart  exiftool_bundle_test.dart  explore_controller_test.dart  explore_interaction_test.dart  explore_model_test.dart  (+31 more)
docs/: RELEASE.md  design.md  mcp-client-config.json
gpsphototag/: __init__.py  __main__.py  cli.py  collectors.py  dates.py  display.py  exif.py  google_source.py  gpx_source.py  locator.py  mapper.py  pruner.py  raw_writer.py  tagger.py  types.py
snap/: snapcraft.yaml
tests/: conftest.py  test_acceptance_criteria.py  test_cli.py  test_collectors.py  test_dates.py  test_display.py  test_exif.py  test_fix_dates.py  test_gap_fills.py  test_google_source.py  test_gpx_source.py  test_locator.py  test_mapper.py  test_pruner.py  test_raw_writer.py  test_tagger.py
tool/: check_coverage.sh  fetch-exiftool.sh  fetch-onnx.sh  setup-hooks.sh
(+121 files in other folders)
