[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpsphototag"
version = "0.1.0"
description = "Tag photos with GPS EXIF from GPX tracks or Google location history."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Kodsama (Alexandre Martins)", email = "kodsama@protonmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "piexif>=1.1.3",
    "Pillow>=10.0",
    "pillow-heif>=0.16",
    "gpxpy>=1.6",
    "rich>=13.7",
    "python-dateutil>=2.8",
    "tzlocal>=5.2",
    "ExifRead>=3.0",
]

[project.optional-dependencies]
map = ["matplotlib>=3.7", "contextily>=1.5", "geopy>=2.4"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "matplotlib>=3.7", "contextily>=1.5", "geopy>=2.4"]

[project.scripts]
gpsphototag = "gpsphototag.cli:main"

[tool.setuptools.packages.find]
include = ["gpsphototag*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=gpsphototag --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
branch = false
source = ["gpsphototag"]
omit = ["gpsphototag/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]
